# deepinsight

./: .env.example  .gitattributes  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  redeploy.bat  start.bat  stop.bat  tailwind.config.ts  tsconfig.json  vite.config.ts  项目开发文档.md
backend/: mvnw  mvnw.cmd  pom.xml
deploy/: .env.example  README.txt  application.yml  export-db.cjs  package-lock.json  package.cmd  package.json  seed-kb-articles.cjs  serve-dist.cjs  start-all.cmd
docs/: ARCHITECTURE.md  PROJECT_MAP.md  local-redeploy.md
scripts/: bulk_insert.py  db-backup.cjs  db-rebuild-copy.cjs  fix_kg.py  fix_kg2.py  fix_kg3.py  insert_forum_posts.py  insert_tutorials.py  recommender-knowledge-data.cjs  redeploy-local.ps1  run-backend-jar.cmd  run-backend-jar.ps1  seed-model-articles.cjs  seed-platform-knowledge.cjs  start-backend.ps1  start-frontend.ps1  test-assistant-navigation.ts  test-data-asset-center.ts  test-deepseek-integration.ts  test-floating-assistant-ui.ts  test-prediction-analysis.ts  test-training-model-catalog.ts  tutorials.json
sdk/: pyproject.toml  requirements.txt  setup.py
sdk/deepinsight_sdk/: __init__.py  log_reader.py  log_writer.py  records.py
sdk/deepinsight_sdk/cli/: main.py
sdk/tests/: test_log_writer.py
src/: App.vue  index.css  main.ts
src/api/: client.ts  index.ts
src/composables/: useRunSelector.ts
src/constants/: index.ts  navigation.ts
src/i18n/: index.ts
src/layout/: AdminLayout.vue  MainLayout.vue
src/router/: index.ts
src/stores/: auth.store.ts  theme.store.ts
(+195 files in other folders)
