[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepinsight-sdk"
version = "0.1.0"
description = "DeepInsight training visualization SDK — log metrics, images, audio, embeddings and more from your ML training scripts"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21",
    "Pillow>=9.0",
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
audio = ["soundfile>=0.12"]

[project.scripts]
deepinsight = "deepinsight_sdk.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
